# ldeps

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml
src/: CMakeLists.txt
src/glad/include/glad/: glad.h
src/glad/src/: glad.c
src/various/include/various/: linmath.h  linmathext.h  miniaudio.h
src/various/include/various/serializer/: Serializer.h
src/various/src/: getopt.c  tinycthread.c
thirdparty_mods/: CMakeLists.txt
