cmake_minimum_required (VERSION 3.21.7)

project(ldeps)

set(TEST_VULKAN False)

# deps thirdparty
set(deps_bs True)
set(deps_jsonxx True)
set(deps_curl True)
set(deps_mongoose True)
set(deps_portaudio True)
set(deps_ed25519 True)
set(deps_darknet False)
set(deps_darknet_examples False)
set(deps_tiny_dnn True)
set(deps_fann True)
set(deps_tengine False)
set(deps_tengine_examples False)
set(deps_ncnn True)
set(deps_ncnn_examples False)
set(deps_libtorch True)


# deps thirdparty mods
set(deps_glfw True)
set(deps_imgui True)
set(deps_implot True)
set(deps_pugixml True)
set(deps_openfbx True)
set(deps_ufbx True)
set(deps_bc7enc True)
set(deps_cryptopp True)


# deps in repo src
set(deps_glad True)
set(deps_various True)
set(deps_pthreads True)

add_subdirectory(src)
add_subdirectory(thirdparty)
add_subdirectory(thirdparty_mods)

option(LDEPS_ENABLE_UNITY_BUILD "Enable unity builds for faster compilation" OFF)
if(LDEPS_ENABLE_UNITY_BUILD)
  set_target_properties(jsonxx PROPERTIES UNITY_BUILD ON)
  set_target_properties(curl PROPERTIES UNITY_BUILD ON)
  set_target_properties(libcurl_object PROPERTIES UNITY_BUILD ON)
  set_target_properties(libcurl_static PROPERTIES UNITY_BUILD ON)
  set_target_properties(mongoose PROPERTIES UNITY_BUILD ON)
  #set_target_properties(PortAudio PROPERTIES UNITY_BUILD ON)
  #set_target_properties(ed25519 PROPERTIES UNITY_BUILD ON)
  #set_target_properties(darknet PROPERTIES UNITY_BUILD ON)
  set_target_properties(tiny_dnn PROPERTIES UNITY_BUILD ON)
  set_target_properties(fann PROPERTIES UNITY_BUILD ON)
  #set_target_properties(tengine PROPERTIES UNITY_BUILD ON)
  #set_target_properties(ncnn PROPERTIES UNITY_BUILD ON)
  #set_target_properties(ncnn2int8 PROPERTIES UNITY_BUILD ON)
  #set_target_properties(ncnn2mem PROPERTIES UNITY_BUILD ON)
  #set_target_properties(ncnn2table PROPERTIES UNITY_BUILD ON)
  #set_target_properties(ncnnmerge PROPERTIES UNITY_BUILD ON)
  #set_target_properties(ncnnoptimize PROPERTIES UNITY_BUILD ON)

  set_target_properties(glfw PROPERTIES UNITY_BUILD ON)
  set_target_properties(update_mappings PROPERTIES UNITY_BUILD ON)
  #set_target_properties(imgui PROPERTIES UNITY_BUILD ON)
  set_target_properties(example_glfw_opengl3 PROPERTIES UNITY_BUILD ON)
  #set_target_properties(implot PROPERTIES UNITY_BUILD ON)
  #set_target_properties(implot_demo PROPERTIES UNITY_BUILD ON)
  set_target_properties(pugixml PROPERTIES UNITY_BUILD ON)
  set_target_properties(openfbx PROPERTIES UNITY_BUILD ON)
  set_target_properties(ufbx PROPERTIES UNITY_BUILD ON)
  set_target_properties(bc7enc PROPERTIES UNITY_BUILD ON)
  #set_target_properties(cryptopp PROPERTIES UNITY_BUILD ON)

  set_target_properties(glad PROPERTIES UNITY_BUILD ON)
  set_target_properties(various PROPERTIES UNITY_BUILD ON)
  set_target_properties(pthreads PROPERTIES UNITY_BUILD ON)
endif()

get_directory_property(hasParent PARENT_DIRECTORY)
if(hasParent)
	message("'ldeps' has parent so setup 'bs'")
	list(APPEND CMAKE_MODULE_PATH ${CMAKE_CURRENT_LIST_DIR}/thirdparty/bs/cmake)
	set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} PARENT_SCOPE)
else()
	message("'ldeps' has no parent")

endif()

